--- a/tools/amlogic/depends/xbmc/Makefile
+++ b/tools/amlogic/depends/xbmc/Makefile
@@ -14,7 +14,7 @@ export USE_TEXTUREPACKER_NATIVE_ROOT=$(BUILDROOT)/output/host
 
 export PATH:=$(SYSROOT)/usr/bin:$(PATH)
 CONFIGURE=./configure --prefix=$(PREFIX) --host=$(HOST) \
-  --enable-neon --enable-external-python --enable-gles --disable-sdl --disable-x11 --disable-xrandr \
+  --enable-neon --enable-gles --disable-sdl --disable-x11 --disable-xrandr \
   --disable-dvdcss --enable-external-ffmpeg --enable-debug \
   --with-platform=amlogic-m1
 
