Added XMLVariantWriter, thx topfs2

--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -58,6 +58,7 @@ SRCS=AlarmClock.cpp \
      Win32Exception.cpp \
      XMLUtils.cpp \
      XMLVariantParser.cpp \
+     XMLVariantWriter.cpp \
 
 LIB=utils.a
 
