Added initial Posix Network Manager implementation, thx topfs2

--- a/xbmc/network/linux/Makefile
+++ b/xbmc/network/linux/Makefile
@@ -2,6 +2,8 @@ SRCS=ZeroconfAvahi.cpp \
      ZeroconfBrowserAvahi.cpp \
      ConnmanConnection.cpp \
      ConnmanNetworkManager.cpp \
+     PosixConnection.cpp \
+     PosixNetworkManager.cpp \
 
 LIB=network_linux.a
 
