--- a/xbmc/network/Makefile.in
+++ b/xbmc/network/Makefile.in
@@ -1,38 +1,39 @@
-INCLUDES+=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Core \
-          -I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Platinum \
-          -I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaServer \
-          -I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaConnect \
-          -I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaRenderer \
-          -I@abs_top_srcdir@/lib/libUPnP/Neptune/Source/System/Posix \
-          -I@abs_top_srcdir@/lib/libUPnP/Neptune/Source/Core
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Core
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Platinum
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaServer
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaConnect
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Platinum/Source/Devices/MediaRenderer
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Neptune/Source/System/Posix
+INCLUDES +=-I@abs_top_srcdir@/lib/libUPnP/Neptune/Source/Core
 
-SRCS=cddb.cpp \
-     DNSNameCache.cpp \
-     EventClient.cpp \
-     EventPacket.cpp \
-     EventServer.cpp \
-     GUIDialogAccessPoints.cpp \
-     GUIDialogNetworkSetup.cpp \
-     Socket.cpp \
-     TCPServer.cpp \
-     UdpClient.cpp \
-     UPnP.cpp \
-     WebServer.cpp \
-     ZeroconfBrowser.cpp \
-     Zeroconf.cpp \
-     NetworkManager.cpp \
-     NetworkUtils.cpp \
-     ConnectionJob.cpp \
+SRCS  = cddb.cpp
+SRCS += DNSNameCache.cpp
+SRCS += EventClient.cpp
+SRCS += EventPacket.cpp
+SRCS += EventServer.cpp
+SRCS += GUIDialogAccessPoints.cpp
+SRCS += GUIDialogNetworkSetup.cpp
+SRCS += Socket.cpp
+SRCS += TCPServer.cpp
+SRCS += UdpClient.cpp
+SRCS += UPnP.cpp
+SRCS += WebServer.cpp
+SRCS += ZeroconfBrowser.cpp
+SRCS += Zeroconf.cpp
+SRCS += NetworkManager.cpp
+SRCS += NetworkUtils.cpp
+SRCS += NullNetworkManager.cpp
+SRCS += ConnectionJob.cpp
 
 ifeq (@USE_AIRPLAY@, 1)
-SRCS+=AirPlayServer.cpp
+SRCS += AirPlayServer.cpp
 endif
 
 ifeq (@USE_AIRTUNES@, 1)
-SRCS+=AirTunesServer.cpp
+SRCS += AirTunesServer.cpp
 endif
 
-LIB=network.a
+LIB = network.a
 
 include @abs_top_srcdir@/Makefile.include
 -include $(patsubst %.cpp,%.P,$(patsubst %.c,%.P,$(SRCS)))
