--- a/.gitignore
+++ b/.gitignore
@@ -1158,6 +1158,7 @@ lib/cmyth/Makefile
 
 # /xbmc/network/
 /xbmc/network/Makefile
+/xbmc/network/linux/Makefile
 /xbmc/network/upnp/Makefile
 
 # /lib/libRTV/
